add saving user notes

--- a/src/components/UserNotes/UserNotes.css
+++ b/src/components/UserNotes/UserNotes.css
@@ -2,3 +2,8 @@
     width: 2rem;
     height: 2rem;
 }
+.important-note {
+    border-style: outset;
+    border-width: 0.3rem;
+    border-color:cornflowerblue;
+}
