add save-success msg

--- a/src/components/UserNotes/UserNotes.css
+++ b/src/components/UserNotes/UserNotes.css
@@ -48,3 +48,10 @@ label {
   display: flex;
   justify-content: center;
 }
+
+.success-msg {
+  font-size: 0.9rem;
+  color: var(--success);
+  margin-left: 2rem;
+  font-weight: bold;
+}
