--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-size: 1.5rem;
   height: 100vh;
+  background-color: var(--base);
 }
 
 /* code {
